feat: added logs to management of escalas; fix: auth token and http responses